--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,12 @@
 @import "tailwindcss";
+
+#root {
+  font-family: Roboto, Inter, sans-serif;
+}
+@theme inline {
+  --color-primary: oklch(0.4837 0.2141 272);
+  --color-complementary: oklch(0.8228 0.1557 105.27);
+  --color-ok: oklch(0.8228 0.2064 147.42);
+  --color-warning: oklch(0.7676 0.1548 52.34);
+  --color-error: oklch(0.704 0.191 22.216);
+}
