--- a/src/index.css
+++ b/src/index.css
@@ -10,10 +10,19 @@ svg {
   width: 20px;
 }
 
+.card-icon {
+  width: fit-content;
+  height: 80px;
+}
+
 @theme inline {
   --color-primary: oklch(0.4837 0.2141 272);
   --color-complementary: oklch(0.8228 0.1557 105.27);
   --color-ok: oklch(0.8228 0.2064 147.42);
   --color-warning: oklch(0.7676 0.1548 52.34);
   --color-error: oklch(0.704 0.191 22.216);
+  --color-pink-card: #DDAED3;
+  --color-navy-card: #213C51;
+  --color-darkgray-card: #6594B1;
+  --color-yellow-card: #FFEE8C;
 }
